test/ui/tests/lowering/invalid-super-or-topmost-in-use-declaration.stderr
error[E026]: path `super` not allowed in this position
 --> ${TEST_FOLDER}/lowering/invalid-super-or-topmost-in-use-declaration.lushui:3:14
  |
3 | use foo.bar.(super.ban topmost self)
  |              ^^^^^
  |
 help: consider moving this path to a separate use-declaration

error[E026]: path `topmost` not allowed in this position
 --> ${TEST_FOLDER}/lowering/invalid-super-or-topmost-in-use-declaration.lushui:3:24
  |
3 | use foo.bar.(super.ban topmost self)
  |                        ^^^^^^^
  |
 help: consider moving this path to a separate use-declaration

error: aborting due to 2 previous errors

